# WeirdGuitar

./: .gitignore  Numerical_wave_equation.tex  README.md  main.ipynb  main.jl  scheme_figgrid.pptx
VisualGuitar/: VisualGuitar.sln
VisualGuitar/VisualGuitar/: VisualGuitar.vcxproj  VisualGuitar.vcxproj.filters  main.cpp  settings.toml
VisualGuitar/source/: CMakeLists.txt  main.cpp
